--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </div>
             <div id="commands">
             <p><span class="stark"><span class="lightpurple">guest</span>@<span class="jewel">nasan.dev</span>:$ ~ </span>
-                <input spellcheck="false" autocomplete="off" id="user_cmd" onkeypress="enterCommand(event)"></input>
+                <input spellcheck="false" autocomplete="off" id="user_cmd" onkeydown="historyScroll(event)" onkeypress="enterCommand(event)"></input>
             </p>
             </div>
         </main>
