--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                 <p><span class="stark"><span class="lightpurple">guest</span>@<span class="jewel">nasan.dev</span>:$ ~ </span></p>
                 <a id="writingLines"></a>
             </div>
+            <p id="passwordLine" class="hidden">[sudo] password for nasan: <input type='password' spellcheck='false' autocomplete='off' id='enterpassword' onkeypress='password(event)'></input><br><br></p>
             <div id="commands">
             <p><span class="stark"><span class="lightpurple">guest</span>@<span class="jewel">nasan.dev</span>:$ ~ </span>
                 <input spellcheck="false" autocomplete="off" id="user_cmd" onkeydown="historyScroll(event)" onkeypress="enterCommand(event)"></input>
