--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@200&family=Source+Code+Pro:wght@500&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/d5effce557.js" crossorigin="anonymous"></script>
-    <link rel="icon" href="hondasan.png">
-    <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="./assets/terminal.png">
+    <link rel="stylesheet" href="./assets/style.css">
 </head>
 <body onload="writeLines(banner, '', 50)">
     <div class="stuff">
