reverted some changes

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="icon" href="./assets/terminal.png">
     <link rel="stylesheet" href="./assets/style.css">
 </head>
-<body onload="writeLines(banner, '', 80)">
+<body onload="writeLines(banner, '', 50)">
     <div class="stuff">
         <main id="main" class="inner fullheight">
             <div id="terminal">
@@ -27,7 +27,7 @@
             </div>
         </main>
     </div>
-    <script src="\js\variables.js"></script>
-    <script src="\js\main.js"></script>
+    <script src=".\js\variables.js"></script>
+    <script src=".\js\main.js"></script>
 </body>
 </html>
