--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="src/css/style.css">
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Terminal</title>
+  <title>WebShell</title>
 </head>
 
 <body onload="FOCUS()">
@@ -25,6 +25,7 @@
   </main>
 </body>
 
+<script src="./src/commands.ts"></script>
 <script src="./src/main.ts"></script>
 
 </html>
