--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   </main>
 </body>
 
-<script src="./src/commands.ts"></script>
-<script src="./src/main.ts"></script>
+<script type="module" src="./src/commands.ts"></script>
+<script type="module" src="./src/main.ts"></script>
 
 </html>
