--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" onclick="FOCUS()">
+<html lang="en">
 
 <head>
   <meta charset="UTF-8" />
@@ -11,7 +11,7 @@
   <title>WebShell</title>
 </head>
 
-<body onload="writeLines(BANNER)">
+<body>
   <main id="main">
     <div id="bars">
       <div id="bar-1">WebShell.exe</div>
@@ -37,14 +37,13 @@
             style="color: var(--prompt-default)">@</span><span style="color: var(--prompt-2)">nasan.dev</span><span
             style="color: var(--prompt-default)">:$ ~</span>
         </span>
-        <input onload="FOCUS()" onkeydown="userInputHandler(event)" id="user-input" />
+        <input id="user-input" />
       </div>
       <br>
     </div>
   </main>
 </body>
 
-<script type="module" src="./src/commands.ts"></script>
 <script type="module" src="./src/main.ts"></script>
 
 </html>
