--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             style="color: var(--prompt-default)">@</span><span style="color: var(--prompt-2)">nasan.dev</span><span
             style="color: var(--prompt-default)">:$ ~</span>
         </span>
-        <input id="user-input" />
+        <input spellcheck="false" autocomplete="off" id="user-input" />
       </div>
       <br>
     </div>
