making easter eggs

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <main id="main">
     <div id="bars">
-      <div id="bar-1">WebShell.exe</div>
+      <div id="bar-1">WebShell.x64_x86</div>
       <div id="bar-2"></div>
       <div id="bar-3"></div>
       <div id="bar-4"></div>
