easter egg steps

--- a/index.html
+++ b/index.html
@@ -33,11 +33,15 @@
     </div>
     <div id="input-line">
       <div>
-        <span id="prompt"><span style="color: var(--prompt-1)">guest</span><span
-            style="color: var(--prompt-default)">@</span><span style="color: var(--prompt-2)">nasan.dev</span><span
-            style="color: var(--prompt-default)">:$ ~</span>
-        </span>
-        <input spellcheck="false" autocomplete="off" id="user-input" />
+        <p id="password-input" style="display: none;">Password: <input id="password-field" autocomplete="off"
+            type="password" /></p>
+        <p id="input-hidden">
+          <span id="prompt"><span style="color: var(--prompt-1)">guest</span><span
+              style="color: var(--prompt-default)">@</span><span style="color: var(--prompt-2)">nasan.dev</span><span
+              style="color: var(--prompt-default)">:$ ~</span>
+          </span>
+          <input spellcheck="false" autocomplete="off" id="user-input" />
+        </p>
       </div>
       <br>
     </div>
