some mobile fixes

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="src/css/css-reset.css">
   <link rel="stylesheet" href="src/css/style.css">
   <link rel="icon" type="image/x-png" href="/res/logo.png" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0 maximum-scale=1" />
   <script src="https://kit.fontawesome.com/d5effce557.js" crossorigin="anonymous"></script>
   <title>WebShell</title>
 </head>
@@ -40,7 +40,7 @@
               style="color: var(--prompt-default)">@</span><span style="color: var(--prompt-2)">nasan.dev</span><span
               style="color: var(--prompt-default)">:$ ~</span>
           </span>
-          <input spellcheck="false" autocomplete="off" id="user-input" />
+          <input id="user-input" spellcheck="false" autocapitalize="none" autocomplete="off" />
         </p>
       </div>
       <br>
